fixing overflows

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -408,6 +408,7 @@ outline:0;
 .msg-content {
   max-height: 400px;
   overflow: scroll;
+  max-width:100%;
 }
 
 .group-left-top{
@@ -498,13 +499,13 @@ text-align:center;
   .group-left{
      display:none !important;
   }
-  .msg-input-wrap{
+  /*.msg-input-wrap{
     bottom:15px;
     width: 75%;
     position: fixed;
     left: 50%;
     margin-left: -37.5%;    
-  }  
+  }  */
 }
 @media screen and (max-width:1000px){
   .group-left-top{
@@ -570,9 +571,10 @@ text-align:center;
 #messages{
   max-height:450px;
   overflow-y:auto;
-  padding-bottom:30px;
+  padding-bottom:0px;
   padding-left:5px;
-
+  padding-right:5px;
+  overflow-wrap: break-word;
 }
 
 .text-area-wrap{
@@ -580,6 +582,7 @@ text-align:center;
 }
 
 .message-box-main-wrap{
+  width:100%;
   position:absolute !important;
 
 }
@@ -593,15 +596,13 @@ text-align:center;
 .msg-input-wrap{
   position:fixed;
   bottom:15px;
-  width:80%;
+  width:90%;
   text-align:center !important;
-
 }
 
 .msg-box-wrap{
-  margin:auto;text-align:center;width:85%;  
+  margin:auto;text-align:center;width:100%;  
 }
-
 
 #new_group{
   ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
@@ -660,4 +661,9 @@ $size: 24px;
     height: $size;
     width: $size;
   }
+}
+
+
+.usernames-wrap{
+  overflow:scroll;
 }
